# web-ban-sung-miniproject

./: README.md  docker-compose.yml
api/: Dockerfile  main.py  pyproject.toml
api/model/: base.py  cart.py  cartitem.py  category.py  order.py  product.py  user.py
api/router/: api.py  cart.py  cart_item  category.py  order.py  product.py  user.py
api/schema/: base.py  cart.py  cartitem.py  category.py  order.py  product.py  user.py
api/sql_app/: database.py
db/: database
web/: package-lock.json  package.json
web/src/components/: footer.vue  index.js
web/src/components/Carousel/: index.vue
web/src/components/Categories/: index.vue  mobile.vue
web/src/components/Dialog/: index.vue
web/src/components/HeaderBar/: index.vue
web/src/components/InputQuantity/: index.vue
web/src/components/LoginDialog/: index.vue
web/src/components/ProductDescription/: index.vue
web/src/components/ProductDetail/: index.vue
web/src/components/Subproduct/: index.vue
web/src/pages/Admin/: index.js  index.vue
web/src/pages/Cart/: index.vue
web/src/pages/Checkout/: index.vue
web/src/pages/Diamondtest/: index.vue
web/src/pages/Home/: index.vue
web/src/pages/Items/: index.vue
web/src/pages/Login/: index.vue
web/src/pages/Orderitem/: index.vue
web/src/pages/Products/: details.vue  index.vue
web/src/pages/Profile/: index.vue
web/src/plugins/: api.js
web/src/router/: index.ts
web/src/utils/: common.js  index.js  urlPath.js
